--- a/style.css
+++ b/style.css
@@ -90,6 +90,16 @@ aside h2
 .mainContent p 
 {
     font-weight: bold;
+    color:#57585a;
+}
+.mainContent h3
+{
+    color: #3e3e3f;
+}
+.mainContent > ul > li
+{
+    color: #6c6d70;
+    
 }
 
 .rightSide h2
@@ -97,6 +107,8 @@ aside h2
     font-size: 30px;
     font-weight: bold;
     margin:0;
+    padding-bottom: 10px;
+    padding-top: 20px;
 }
 h3
 {
@@ -108,8 +120,9 @@ h3
 h3 span
 {
     display: block;
-    font-size: 1rm;
+    font-size: 15px;
     font-weight: 400;
+    color: #6c6d70;
 }
 .flags
 {
@@ -127,6 +140,17 @@ h3 span
     width: 180px;
     height: 120px;
 }
+.flags > div span
+{
+    color: #808285;
+    font-size: 12px;
+}
+.lang
+{
+    color: #57585a;
+    margin: 0;
+}
+
 a
 {
     color: inherit;
