--- a/style.css
+++ b/style.css
@@ -58,10 +58,23 @@ aside ::selection{
 .aboutMe
 {   
     font-size: 15px;
-    color: black;
     margin:0;
     color: #d1d2d4;
     padding-bottom: 25px;
+}
+.skills
+{
+    font-size: 15px;
+    color: #d1d2d4;
+    list-style-type: none;
+    padding:0;
+}
+.skills > li
+{
+padding-bottom: 15px;
+display: flex;
+justify-content: space-between;
+
 }
 aside h2
 {
@@ -176,6 +189,23 @@ a
 {
     margin: 0px;
     font-size: 13px;
+}
+.circle {
+    width: 12px;
+    height: 12px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    border-radius: 25px;
+    background:white;
+    margin-left: 5px;
+   
+  }
+  .wraper
+  {
+    display: flex;
+  }
+.active-color{
+    background: gray;
 }
 @media(max-width:940px)
 {
